--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api_express_ferre",
   "version": "1.0.0",
- "main": "server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   }
